sesion3/admin-ene-2023/11-ingress/01-ingress.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: deployment-demoapp  
  labels:
    app: ingress-demoapp
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: ingress-demoapp 
  template: 
    metadata:
      labels:
        app: ingress-demoapp
    spec:
      containers:
      - name: con-demoapp
        image: icuadrosaforo255/dockerdemo
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  labels:
    app: ingress-demoapp
spec:
  type: ClusterIP
  selector:
    app: ingress-demoapp 
  ports:
    - port: 8080
      targetPort: 80  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /appv1
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
              number: 8080
